apply flexwrap, fix some glitch

--- a/src/style/Mainframe.css
+++ b/src/style/Mainframe.css
@@ -3,5 +3,4 @@
     flex:1;
     flex-direction: column;
     display: flex;
-    padding: 10px;
 }
